# IEM-Tool-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  RUST-PORT.md  install.ps1  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app-files/: dsp-processor-wasm.js  iem-core.js  index.html
app-files/wasm/: iem_core.wasm
rust/: Cargo.toml  build-wasm.ps1  build-wasm.sh
rust/iem-core/: Cargo.toml
rust/iem-core/examples/: bench.rs  dump.rs
rust/iem-core/src/: autoeq.rs  biquad.rs  curves.rs  engine.rs  lib.rs  magnitude.rs
rust/iem-core/tests/: core_tests.rs
rust/iem-utils/: Cargo.toml
rust/iem-utils/src/: lib.rs
rust/iem-utils/tests/: graphiceq_tests.rs  utils_tests.rs
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/capabilities/: default.json
rust/src-tauri/src/: lib.rs  main.rs
tools/: Create-Shortcut.ps1  build.ps1
