[package]
name = "iem-tool-rs"
version = "1.3.0"
edition = "2021"
description = "IEM-Tool-rs — Parametric EQ & Frequency Response Analyzer (Tauri shell, Rust core)."
authors = ["Londopy"]
license = "MIT"

[lib]
name = "iem_tool_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iem-core = { path = "../iem-core" }
iem-utils = { path = "../iem-utils" }
